--- a/N1-LEDE/.config
+++ b/N1-LEDE/.config
@@ -44,6 +44,7 @@ CONFIG_PACKAGE_luci-app-lucky=n
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-openclash=y
 
 #acme
 CONFIG_PACKAGE_luci-app-acme=y
